gtick 0.5.3, UNRELEASED, Roland Stigge <stigge@antcom.de>
	* Updated Brazilian Portuguese, Finnish, Russian and Ukrainian
	  translations

gtick 0.5.2, 2013-03-08, Roland Stigge <stigge@antcom.de>
	* Updated Czech, French, German, Indonesian and Vietnamese translations
	* Added Galician translation
	* Included fixes by Nils Philippsen:
	  - Building with new bison
	  - Double free

gtick 0.5.1, 2012-03-26, Roland Stigge <stigge@antcom.de>
	* Updated Chinese (simple), Dutch, Esperanto, German, Italian and
	  Polish translations
	* Added Serbian translation
	* Set MIN_BPM to 1 to extend range

gtick 0.5.0, 2011-08-06, Roland Stigge <stigge@antcom.de>
	* Added Pulseaudio support by Alexander Varnin and Samo Pogacnik
	* Added patch by Samuel Thibault <sthibault@debian.org> to fix build
	  problems on non-Linux systems
	* Added Indonesian translation, thanks to Andhika Padmawan
	* Added Esperanto translation, thanks to Felipe Castro
	* Added Persian translation, thanks to Mahyar Moghimi
	* Updated Chinese (simple), Dutch, French, Irish, Italian and
	  Vietnamese translations
	* Updated Spanish translation (by Carlos Pérez Cuenco, not from TP, to
	  be synced later!)

gtick 0.4.2, 2008-05-22, Roland Stigge <stigge@antcom.de>
	* Added Polish translation, thanks to Tomasz Sałaciński
	* Added Danish translation, thanks to Frederik 'Freso' S. Olesen
	* Updated Irish, Italian, Russian and Vietnamese translations
	* configure.ac: Drop default -O3 optimization
	* Added gtick.desktop
	* Added initial testsuite and first tests (extern and static
	  functions)

gtick 0.4.1, 2007-08-18, Roland Stigge <stigge@antcom.de>
	* Fixed segfault with user defined sound file (libsndfile)

gtick 0.4.0, 2007-08-13, Roland Stigge <stigge@antcom.de>
	* Changed mailing list address to gtick-devel@gnu.org
	* Updated to GPL v3
	* Updated Dutch, Finnish, Irish, Italian and Vietnamese translations

gtick 0.3.15, 2007-05-05, Roland Stigge <stigge@antcom.de>