@@ -2,7 +2,12 @@ SUBDIRS = doc intl po src testsuite
 
 EXTRA_DIST = config.rpath \
 	     autogen.sh \
+	     gtick.appdata.xml \
 	     gtick.spec \
 	     ABOUT-NLS
 
+appdatadir = $(datadir)/appdata
+appdata_DATA = gtick.appdata.xml
+
 #AUTOMAKE_OPTIONS = dist-bzip2
+AUTOMAKE_OPTIONS = subdir-objects
