@@ -1,8 +1,3 @@
 #!/bin/sh
 
-#gettextize --force --copy --intl --no-changelog
-autopoint --force
-aclocal -I m4
-autoheader
-automake --add-missing --force-missing --gnu --copy
-autoconf
+autoreconf -fi
