@@ -6,7 +6,7 @@ Comment=a GTK-based metronome
 Comment[pt]=Um metrônomo baseado em GTK
 Comment[pt-br]=Um metrônomo baseado em GTK
 Exec=/usr/bin/gtick
-Icon=/usr/share/pixmaps/gtick_32x32.xpm
+Icon=/usr/share/icons/hicolor/64x64/apps/gtick.xpm
 Terminal=false
 Type=Application
 Categories=GTK;AudioVideo;Audio;
